# gino

./: CMakeLists.txt  README.md  clean.sh  uninstall.sh
docs/: manual.md
src/: main.c  makefile  utils.c  utils.h
